crates/sith_python_parser/src/snapshots/python_parser__lexer__tests__bom_with_offset.snap
---
source: crates/sith_python_parser/src/lexer.rs
expression: "lex_source_with_offset(source, TextSize::new(7))"
---
## Tokens
```
[
    (
        Name(
            Name("y"),
        ),
        7..8,
    ),
    (
        Plus,
        9..10,
    ),
    (
        Name(
            Name("z"),
        ),
        11..12,
    ),
    (
        Newline,
        12..12,
    ),
]
```
