crates/sith_python_parser/src/snapshots/python_parser__lexer__tests__fstring_single_quote_escape_unix_eol.snap
---
source: crates/sith_python_parser/src/lexer.rs
expression: fstring_single_quote_escape_eol(UNIX_EOL)
---
## Tokens
```
[
    (
        FStringStart,
        0..2,
        TokenFlags(
            F_STRING,
        ),
    ),
    (
        FStringMiddle(
            "text \\\n more text",
        ),
        2..19,
        TokenFlags(
            F_STRING,
        ),
    ),
    (
        FStringEnd,
        19..20,
        TokenFlags(
            F_STRING,
        ),
    ),
    (
        Newline,
        20..20,
    ),
]
```
